# corridorkey-studio

./: .gitignore  DESIGN_CONCEPT.md  DESIGN_MOCK.html  PROGRESS.md  README.md
corridorkey-studio-backend/: PROGRESS.md  README.md  pyproject.toml
corridorkey-studio-backend/corridorkey_studio/: __init__.py  __main__.py  app.py  cli.py  config.py
corridorkey-studio-backend/corridorkey_studio/inference/: base.py  corridorkey.py  gvm.py  videomama.py
corridorkey-studio-backend/corridorkey_studio/models/: enums.py  schemas.py
corridorkey-studio-backend/corridorkey_studio/routers/: clips.py  frames.py  health.py  jobs.py
corridorkey-studio-backend/corridorkey_studio/services/: clip_manager.py  frame_store.py  gpu.py  job_queue.py  model_manager.py
corridorkey-studio-backend/corridorkey_studio/utils/: color.py  errors.py  image_io.py  video.py
corridorkey-studio-fal-app/: README.md  extract_app.py
corridorkey-studio-web-app/: .env.local.example  package.json  pnpm-lock.yaml  proxy.ts
corridorkey-studio-web-app/app/: StudioShell.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
corridorkey-studio-web-app/app/api/auth/token/: route.ts
corridorkey-studio-web-app/app/api/fal-proxy/: route.ts
corridorkey-studio-web-app/app/components/: DefaultProjectRedirect.tsx  DualViewer.tsx  FrameScrubber.tsx  IOTray.tsx  ParameterPanel.tsx  ProjectSwitcher.tsx  ProjectsPane.tsx  QueuePanel.tsx  ServerSetup.tsx  SidePanel.tsx  SignInScreen.tsx  SplashScreen.tsx  StatusBar.tsx  TopBar.tsx  UserMenu.tsx  ViewModeBar.tsx  WelcomeScreen.tsx
corridorkey-studio-web-app/app/lib/: api.ts  importClip.ts  mock-data.ts  types.ts  useBlobUrl.ts  useJobEvents.ts  useProjectSettings.ts  useResizeHandle.ts  useServerHealth.ts
corridorkey-studio-web-app/app/projects/[id]/: page.tsx
corridorkey-studio-web-app/app/providers/: ConvexProvider.tsx  useWorkOSAuth.ts
corridorkey-studio-web-app/app/stores/: useClipStore.ts  useDirtyStore.ts  useQueueStore.ts  useSessionClipStore.ts  useSettingsStore.ts
corridorkey-studio-web-app/convex/: auth.config.ts  clips.ts  projects.ts  schema.ts  users.ts
corridorkey-studio-web-app/convex/_generated/: api.d.ts
