[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corridorkey-studio"
version = "0.1.0"
description = "Local GPU server for CorridorKey Studio — AI green screen keying"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
]

[project.scripts]
corridorkey-studio = "corridorkey_studio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["corridorkey_studio"]
